--- a/SemanticTypesRun/SemanticTypesRun.csproj
+++ b/SemanticTypesRun/SemanticTypesRun.csproj
@@ -42,6 +42,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Area.cs" />
+    <Compile Include="Length.cs" />
     <Compile Include="MySemanticTypes.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
